Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   
+<script src="https://unpkg.com/@phosphor-icons/web"></script>
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -320,69 +321,103 @@
             La Ley C.U.R.A. crea la Credencial Única para que tu historia clínica viaje con vos. Un solo sistema que garantiza atención rápida, justa y sin papeles.
         </p>
     </div>
-
-    <div class="relative z-10">
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Tu DNI de salud</h3>
-                <p class="text-xs text-cura-accentLight">Funciona como un documento único que unifica tu historia clínica</strong> del sector público, privado y obras sociales.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3>
-                <p class="text-xs text-cura-accentLight">Auditorías estrictas y accesos por niveles donde <strong>vos decidís qué información compartir</strong> con cada profesional.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3>
-                <p class="text-xs text-cura-accentLight">Tu historia clínica viaja con vos. Disponible para consultar en cualquier ciudad, provincia o país del exterior.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3>
-                <p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital. Olvidate de perder papeles o llevar estudios viejos.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Recetas automáticas</h3>
-                <p class="text-xs text-cura-accentLight">¿Medicación crónica? Recibí y validá tus recetas automáticamente sin volver al consultorio.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Simplificamos PAMI</h3>
-                <p class="text-xs text-cura-accentLight">Menos filas y trámites presenciales. Turnos rápidos y traslados automáticos para quienes más lo necesitan.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Salvavidas</h3>
-                <p class="text-xs text-cura-accentLight">En una urgencia, un escaneo rápido (QR/NFC) revela tus alergias y datos vitales para salvarte la vida.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Basta de repetir estudios</h3>
-                <p class="text-xs text-cura-accentLight">Si ya te lo hiciste, el médico lo ve. Ahorrá tiempo y molestias innecesarias.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Atención más humana</h3>
-                <p class="text-xs text-cura-accentLight">La tecnología se ocupa de los datos, el médico se ocupa de vos.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Conseguí turno rápido</h3>
-                <p class="text-xs text-cura-accentLight">Agenda unificada que encuentra el turno más cercano entre hospitales y clínicas.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Recursos donde importan</h3>
-                <p class="text-xs text-cura-accentLight">Al reducir errores y gastos administrativos, el dinero vuelve en mejor atención e insumos.</p>
-            </div>
-            <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
-                <h3 class="text-sm font-semibold text-white mb-1">Alertas de salud</h3>
-                <p class="text-xs text-cura-accentLight">Recibí recordatorios automáticos de vacunas, chequeos anuales y controles preventivos según tu edad.</p>
-            </div>
-
-<div class="sm:col-span-2 lg:col-span-2 bg-gradient-to-r from-cura-card to-cura-primaryDark rounded-xl border border-cura-accent/60 p-5 shadow-md transition hover:-translate-y-1">
-    <div class="flex items-center gap-3 mb-2">
-        <span class="text-xl">🧠</span>
-        <h3 class="text-sm font-bold text-white">Prioridad en Salud Mental</h3>
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-identification-card text-cura-accent text-lg"></i> Tu DNI de salud
+        </h3>
+        <p class="text-xs text-cura-accentLight">Funciona como un documento único que unifica tu historia clínica del sector público, privado y obras sociales.</p>
     </div>
-    <p class="text-xs text-cura-accentLight">Digitalizamos el seguimiento terapéutico con <strong>máxima reserva de identidad</strong>. Acceso inmediato a redes de contención y turnos prioritarios en crisis, garantizando continuidad entre profesionales.</p>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-shield-check text-cura-accent text-lg"></i> Seguridad y privacidad
+        </h3>
+        <p class="text-xs text-cura-accentLight">Auditorías estrictas y accesos por niveles donde <strong>vos decidís qué información compartir</strong>.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-globe-hemisphere-west text-cura-accent text-lg"></i> Interoperabilidad
+        </h3>
+        <p class="text-xs text-cura-accentLight">Tu historia clínica viaja con vos. Disponible para consultar en cualquier ciudad o país del exterior.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-file-x text-cura-accent text-lg"></i> Fin del papeleo
+        </h3>
+        <p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital. Olvidate de perder papeles o llevar estudios viejos.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-pill text-cura-accent text-lg"></i> Recetas automáticas
+        </h3>
+        <p class="text-xs text-cura-accentLight">¿Medicación crónica? Recibí y validá tus recetas automáticamente sin volver al consultorio.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-users-three text-cura-accent text-lg"></i> Simplificamos PAMI
+        </h3>
+        <p class="text-xs text-cura-accentLight">Menos filas y trámites presenciales. Turnos rápidos y traslados automáticos para quienes más lo necesitan.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-first-aid text-cura-accent text-lg"></i> Salvavidas
+        </h3>
+        <p class="text-xs text-cura-accentLight">En una urgencia, un escaneo rápido (QR/NFC) revela tus alergias y datos vitales para salvarte la vida.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-microscope text-cura-accent text-lg"></i> Basta de repetir estudios
+        </h3>
+        <p class="text-xs text-cura-accentLight">Si ya te lo hiciste, el médico lo ve. Ahorrá tiempo y molestias innecesarias.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-hand-heart text-cura-accent text-lg"></i> Atención más humana
+        </h3>
+        <p class="text-xs text-cura-accentLight">La tecnología se ocupa de los datos administrativos, el médico se ocupa de vos.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-calendar-check text-cura-accent text-lg"></i> Conseguí turno rápido
+        </h3>
+        <p class="text-xs text-cura-accentLight">Agenda unificada que encuentra el turno más cercano entre hospitales y clínicas.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-chart-line-up text-cura-accent text-lg"></i> Recursos donde importan
+        </h3>
+        <p class="text-xs text-cura-accentLight">Al reducir gastos administrativos, el dinero vuelve en mejor atención e insumos médicos.</p>
+    </div>
+
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
+        <h3 class="text-sm font-semibold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-bell-ringing text-cura-accent text-lg"></i> Alertas de salud
+        </h3>
+        <p class="text-xs text-cura-accentLight">Recibí recordatorios automáticos de vacunas y chequeos preventivos según tu edad.</p>
+    </div>
+
+    <div class="sm:col-span-2 lg:col-span-3 bg-cura-card rounded-xl border border-cura-accent/60 p-5 shadow-lg transition hover:-translate-y-1 hover:border-cura-accent">
+        <h3 class="text-sm md:text-base font-bold text-white mb-2 flex items-center gap-2">
+            <i class="ph-bold ph-brain text-cura-accent text-xl"></i> Prioridad en Salud Mental
+        </h3>
+        <p class="text-xs md:text-sm text-cura-accentLight leading-relaxed">
+            Digitalizamos el seguimiento terapéutico con <strong>máxima reserva de identidad</strong>. Esta ley garantiza la continuidad entre profesionales y el acceso inmediato a redes de contención en momentos de crisis.
+        </p>
+    </div>
+
 </div>
-
-
-        </div> <div class="mt-12 flex justify-center w-full">
+ <div class="mt-12 flex justify-center w-full">
             <a href="/Informacion/informacion.html" 
                class="group relative inline-flex items-center gap-2 px-8 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10">
                 <span>Hay más beneficios. <strong>¿Querés saber más? Hacé click acá</strong></span>
