Actualizar informacion.html

--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -227,13 +227,14 @@
         </a>
 
         <a href="/Informacion/seg-priv.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
-            <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2">
-                <i class="ph-bold ph-lock-keyhole text-cura-accent"></i> Seguridad y Privacidad
-            </h3>
-            <p class="text-xs md:text-sm text-cura-accentLight">
-                Cifrado extremo a extremo, tokenización y controles de acceso por niveles.
-            </p>
-        </a>
+    <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2">
+        <i class="ph-bold ph-shield-check text-cura-accent"></i> Seguridad y Privacidad
+    </h3>
+    <p class="text-xs md:text-sm text-cura-accentLight">
+        Cifrado extremo a extremo, tokenización y controles de acceso por niveles para proteger tus datos.
+    </p>
+</a>
+
 
         <a href="/Informacion/marco-legal.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
             <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2">
