Actualizar informacion.html

--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -149,28 +149,44 @@
                     <div class="w-full border-t border-white/20 my-2"></div>
 
                     <!-- Texto Biografía -->
-                    <div class="text-sm text-cura-accentLight text-left mt-3 space-y-3 leading-relaxed">
-                  <p>
-        <strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con una sólida trayectoria en el sector público.
-    </p>
+              <div class="text-sm text-cura-accentLight text-left mt-3 space-y-4 leading-relaxed">
+    
+    <div class="flex gap-3">
+        <i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
+        <p>
+            <strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con una sólida trayectoria en el sector público.
+        </p>
+    </div>
 
-    <p>
-        Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS/OMS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario y Técnica Normativa.
-    </p>
+    <div class="flex gap-3">
+        <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
+        <p>
+            Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS/OMS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario y Técnica Normativa.
+        </p>
+    </div>
 
-    <p>
-        Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa de infraestructura crítica diseñada para modernizar el Estado. Su trabajo se centra en transformar la gestión pública mediante herramientas concretas que aumenten la calidad, la eficiencia del gasto y la transparencia del sistema sanitario, garantizando la trazabilidad plena en todo el país.
-    </p>
+    <div class="flex gap-3">
+        <i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
+        <p>
+            Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa de infraestructura crítica diseñada para modernizar el Estado. Su trabajo se centra en transformar la gestión pública mediante herramientas concretas que aumenten la calidad, la eficiencia del gasto y la transparencia del sistema sanitario, garantizando la trazabilidad plena en todo el país.
+        </p>
+    </div>
 
-    <p>
-        <strong>La motivación detrás de la Ley:</strong> El proyecto no nace en un escritorio, sino de la experiencia personal. Franco vivió en primera persona la fragmentación del sistema: historias clínicas dispersas, diagnósticos inconexos y la burocracia de los trámites repetidos. Ese recorrido lo llevó a transformar la frustración de paciente en una propuesta técnica y operativa con una sola meta: <strong>que ninguna persona vuelva a atravesar las barreras de un sistema desconectado.</strong>
-    </p>
+    <div class="flex gap-3">
+        <i class="ph-bold ph-user-focus text-cura-accent shrink-0 text-xl"></i>
+        <p>
+            <strong>La motivación detrás de la Ley:</strong> El proyecto no nace en un escritorio, sino de la experiencia personal. Franco vivió en primera persona la fragmentación del sistema: historias clínicas dispersas, diagnósticos inconexos y la burocracia de los trámites repetidos. Ese recorrido lo llevó a transformar la frustración de paciente en una propuesta técnica y operativa con una sola meta: <strong>que ninguna persona vuelva a atravesar las barreras de un sistema desconectado.</strong>
+        </p>
+    </div>
 
-    <p>
-        Con una visión centrada en el ciudadano y un compromiso real con la modernización, Franco impulsa hoy la Ley C.U.R.A. como el cambio estructural necesario para el futuro de la salud en Argentina.
-    </p>
-                    </div>
-                </div>
+    <div class="flex gap-3">
+        <i class="ph-bold ph-strategy text-cura-accent shrink-0 text-xl"></i>
+        <p>
+            Con una visión centrada en el ciudadano y un compromiso real con la modernización, Franco impulsa hoy la Ley C.U.R.A. como el cambio estructural necesario para el futuro de la salud en Argentina.
+        </p>
+    </div>
+</div>
+
             </div>
 
             <!-- 
