--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -149,10 +149,18 @@
                     <div class="w-full border-t border-white/20 my-2"></div>
 
                     <!-- Texto Biografía -->
-              <div class="grid md:grid-cols-12 gap-8 items-start">
+       <div class="grid md:grid-cols-12 gap-8 items-start">
     
     <div class="md:col-span-7 lg:col-span-8 order-1 md:order-2">
         <div class="grid sm:grid-cols-2 gap-4">
+            <a href="/Informacion/seg-priv.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2">
+                    <i class="ph-bold ph-lock-key text-cura-accent"></i> Seguridad y Privacidad
+                </h3>
+                <p class="text-xs md:text-sm text-cura-accentLight">
+                    Mecanismos de protección: cifrado extremo a extremo, auditorías y accesos por niveles.
+                </p>
+            </a>
             </div>
     </div>
 
@@ -172,9 +180,44 @@
             <div class="w-full border-t border-white/20 my-2"></div>
 
             <div class="text-sm text-cura-accentLight text-left mt-3 space-y-4 leading-relaxed">
+                <div class="flex gap-3">
+                    <i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
+                    <p>
+                        <strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con una sólida trayectoria en el sector público.
+                    </p>
                 </div>
+
+                <div class="flex gap-3">
+                    <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
+                    <p>
+                        Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS/OMS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario y Técnica Normativa.
+                    </p>
+                </div>
+
+                <div class="flex gap-3">
+                    <i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
+                    <p>
+                        Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa de infraestructura crítica diseñada para modernizar el Estado. Su trabajo se centra en transformar la gestión pública mediante herramientas concretas que aumenten la calidad, la eficiencia del gasto y la transparencia del sistema sanitario, garantizando la trazabilidad plena en todo el país.
+                    </p>
+                </div>
+
+                <div class="flex gap-3">
+                    <i class="ph-bold ph-user-focus text-cura-accent shrink-0 text-xl"></i>
+                    <p>
+                        <strong>La motivación detrás de la Ley:</strong> El proyecto no nace en un escritorio, sino de la experiencia personal. Franco vivió en primera persona la fragmentación del sistema: historias clínicas dispersas, diagnósticos inconexos y la burocracia de los trámites repetidos. Ese recorrido lo llevó a transformar la frustración de paciente en una propuesta técnica y operativa con una sola meta: <strong>que ninguna persona vuelva a atravesar las barreras de un sistema desconectado.</strong>
+                    </p>
+                </div>
+
+                <div class="flex gap-3">
+                    <i class="ph-bold ph-strategy text-cura-accent shrink-0 text-xl"></i>
+                    <p>
+                        Con una visión centrada en el ciudadano y un compromiso real con la modernización, Franco impulsa hoy la Ley C.U.R.A. como el cambio estructural necesario para el futuro de la salud en Argentina.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 
 </div>
 
