Actualizar informacion.html

--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -87,12 +87,12 @@
             <div class="md:col-span-7 lg:col-span-8 order-1 md:order-2">
                 <div class="grid sm:grid-cols-2 gap-4">
                     <a href="/Informacion/objetivos.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
-                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-target text-cura-accent"></i> Objetivos</h3>
-                        <p class="text-xs md:text-sm text-cura-accentLight">Propósitos centrales del proyecto para modernizar la infraestructura digital.</p>
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-target text-cura-accent"></i> Objetivos del Sistema</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Propósitos centrales: simplificar el acceso, reducir errores y unificar historias clínicas.</p>
                     </a>
                     <a href="/Informacion/fundamentos.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
-                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-scales text-cura-accent"></i> Fundamentos</h3>
-                        <p class="text-xs md:text-sm text-cura-accentLight">Por qué la salud digital unificada es necesaria para el sistema sanitario actual.</p>
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-scales text-cura-accent"></i> Fundamentos de la Ley</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Por qué la salud digital unificada es necesaria y cómo soluciona problemas actuales.</p>
                     </a>
                     <a href="/Informacion/financiamiento.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-bank text-cura-accent"></i> Financiamiento</h3>
@@ -100,15 +100,47 @@
                     </a>
                     <a href="/Informacion/implementacion-tecnica.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-cpu text-cura-accent"></i> Implementación Técnica</h3>
-                        <p class="text-xs md:text-sm text-cura-accentLight">Arquitectura, APIs, blockchain, encriptación y componentes tecnológicos.</p>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Detalles sobre arquitectura, APIs, blockchain y componentes tecnológicos.</p>
+                    </a>
+                    <a href="/Informacion/beneficios.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-hand-heart text-cura-accent"></i> Beneficios Generales</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Ventajas concretas: acceso rápido, menos papeleo y atención más humana.</p>
                     </a>
                     <a href="/Informacion/seg-priv.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-lock-key text-cura-accent"></i> Seguridad y Privacidad</h3>
-                        <p class="text-xs md:text-sm text-cura-accentLight">Cifrado extremo a extremo y controles que garantizan protección plena.</p>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Mecanismos de protección: cifrado, auditorías y accesos por niveles.</p>
+                    </a>
+                    <a href="/Informacion/marco-legal.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-gavel text-cura-accent"></i> Marco Legal</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Normas nacionales y leyes de protección de datos que respaldan C.U.R.A.</p>
+                    </a>
+                    <a href="/Informacion/alcance.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-map-trifold text-cura-accent"></i> Alcance Federal</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Integración de provincias, municipios y obras sociales en la gobernanza.</p>
                     </a>
                     <a href="/Informacion/interoperabilidad.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-intersect text-cura-accent"></i> Interoperabilidad</h3>
-                        <p class="text-xs md:text-sm text-cura-accentLight">Estandarización del intercambio usando HL7 FHIR y SNOMED CT.</p>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Estandarización bajo normas internacionales HL7 FHIR y SNOMED CT.</p>
+                    </a>
+                    <a href="/Informacion/infraestructura.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-hard-drives text-cura-accent"></i> Infraestructura Nacional</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Servidores, nodos de respaldo y medidas de alta disponibilidad.</p>
+                    </a>
+                    <a href="/Informacion/roadmap.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-path text-cura-accent"></i> Implementación por Etapas</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Cronograma de despliegue progresivo, pilotos y lanzamiento oficial.</p>
+                    </a>
+                    <a href="/Informacion/participacion.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-users-four text-cura-accent"></i> Participación Ciudadana</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Herramientas de control social y supervisión de transparencia.</p>
+                    </a>
+                    <a href="/Informacion/faq.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-question text-cura-accent"></i> Preguntas Frecuentes</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Respuestas a dudas comunes sobre seguridad y uso de la credencial.</p>
+                    </a>
+                    <a href="/Informacion/recursos.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-folder-open text-cura-accent"></i> Recursos Descargables</h3>
+                        <p class="text-xs md:text-sm text-cura-accentLight">Acceso a PDFs, documentos técnicos y material oficial del proyecto.</p>
                     </a>
                 </div>
             </div>
@@ -123,20 +155,45 @@
                         <i class="ph-fill ph-linkedin-logo"></i> LinkedIn
                     </a>
                     <div class="w-full border-t border-white/20 my-2"></div>
+
                     <div class="text-sm text-cura-accentLight text-left mt-3 space-y-4 leading-relaxed">
-                        <div class="flex gap-3"><i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
-                        <p><strong>Franco Agustín Paganini</strong> es Especialista en Gestión de Salud Digital y profesional de TI con sólida trayectoria en el sector público.</p></div>
-                        <div class="flex gap-3"><i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
-                        <p>Su formación combina arquitectura técnica y estrategia sanitaria. Cursó Lic. en Sistemas (UNLU) y cuenta con certificaciones internacionales de la OPS/OMS y HL7 FHIR.</p></div>
-                        <div class="flex gap-3"><i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
-                        <p>Es autor intelectual de la Ley C.U.R.A., diseñada para modernizar el Estado mediante herramientas que aumenten la calidad y transparencia del sistema sanitario.</p></div>
-                        <div class="flex gap-3"><i class="ph-bold ph-user-focus text-cura-accent shrink-0 text-xl"></i>
-                        <p><strong>Motivación:</strong> El proyecto nace de la experiencia personal con la fragmentación del sistema, buscando que nadie vuelva a atravesar barreras burocráticas desconectadas.</p></div>
+                        <div class="flex gap-3">
+                            <i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
+                            <p><strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con una sólida trayectoria en el sector público.</p>
+                        </div>
+                        <div class="flex gap-3">
+                            <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
+                            <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS/OMS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario y Técnica Normativa.</p>
+                        </div>
+                        <div class="flex gap-3">
+                            <i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
+                            <p>Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa de infraestructura crítica diseñada para modernizar el Estado. Su trabajo se centra en transformar la gestión pública mediante herramientas concretas que aumenten la calidad, la eficiencia del gasto y la transparencia del sistema sanitario, garantizando la trazabilidad plena en todo el país.</p>
+                        </div>
+                        <div class="flex gap-3">
+                            <i class="ph-bold ph-user-focus text-cura-accent shrink-0 text-xl"></i>
+                            <p><strong>La motivación detrás de la Ley:</strong> El proyecto no nace en un escritorio, sino de la experiencia personal. Franco vivió en primera persona la fragmentación del sistema: historias clínicas dispersas, diagnósticos inconexos y la burocracia de los trámites repetidos. Ese recorrido lo llevó a transformar la frustración de paciente en una propuesta técnica y operativa con una sola meta: <strong>que ninguna persona vuelva a atravesar las barreras de un sistema desconectado.</strong></p>
+                        </div>
+                        <div class="flex gap-3">
+                            <i class="ph-bold ph-strategy text-cura-accent shrink-0 text-xl"></i>
+                            <p>Con una visión centrada en el ciudadano y un compromiso real con la modernización, Franco impulsa hoy la Ley C.U.R.A. como el cambio estructural necesario para el futuro de la salud en Argentina.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section id="sumate" class="space-y-6 pt-10 border-t border-cura-accent/20 w-full max-w-5xl mx-auto">
+      <div class="max-w-2xl">
+        <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
+        <p class="text-sm text-cura-accentLight">Para sumarte a la iniciativa y participar del cambio, contactanos a través de nuestras redes o canales oficiales.</p>
+      </div>
+    </section>
   </main>
+
+  <footer class="bg-cura-primaryDark py-8 border-t border-cura-accent/20 text-center text-xs text-cura-accentLight">
+    <p>© 2026 Ley C.U.R.A. - Transformación Digital Sanitaria Argentina</p>
+  </footer>
+
 </body>
 </html>
