--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -61,7 +61,7 @@
         <a href="/index.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
             <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver
         </a>
-        <a href="#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumate</a>
+        <a href="index.html#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumate</a>
         <a href="/demo.html" class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
@@ -183,12 +183,7 @@
         </div>
     </section>
 
-    <section id="sumate" class="space-y-6 pt-10 border-t border-cura-accent/20 w-full max-w-5xl mx-auto">
-      <div class="max-w-2xl">
-        <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
-        <p class="text-sm text-cura-accentLight">Para sumarte a la iniciativa y participar del cambio, contactanos a través de nuestras redes o canales oficiales.</p>
-      </div>
-    </section>
+
   </main>
 
   <footer class="bg-cura-primaryDark py-8 border-t border-cura-accent/20 text-center text-xs text-cura-accentLight">
