--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -61,7 +61,7 @@
         <a href="/index.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
             <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> Volver
         </a>
-        <a href="index.html#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumate</a>
+        <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumate</a>
         <a href="/demo.html" class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
