--- a/Informacion/alcance.html
+++ b/Informacion/alcance.html
@@ -64,6 +64,7 @@
       </a>
       <nav class="flex items-center gap-6 text-sm font-medium">
         <a href="/index.html" class="text-cura-accentLight hover:text-white transition">Inicio</a>
+        <a href="https://www.leycura.org/#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">Sumarme</a>
         <a href="/demo.html" class="bg-cura-accent text-cura-primaryDark px-4 py-1.5 rounded-full text-xs font-bold hover:bg-white transition">Demostración</a>
       </nav>
     </div>
