--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -150,8 +150,9 @@
                         <img src="/ID01-41316202/profile.png" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
                     </div>
                     <h2 class="text-xl font-bold text-white mb-3">Franco A. Paganini</h2>
-                    <a href="https://linkedin.com/in/franco-paganini" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-[#0077b5] hover:bg-[#005e93] text-white text-sm font-semibold rounded-md transition-colors w-full justify-center mb-4">
-                        <i class="ph-fill ph-linkedin-logo"></i> LinkedIn
+             <a href="https://linkedin.com/in/franco-paganini" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-[#0077b5] hover:bg-[#005e93] text-white text-sm font-semibold rounded-md transition-colors w-full justify-center mb-4">
+                        <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                        LinkedIn
                     </a>
                     <div class="w-full border-t border-white/20 my-2"></div>
 
