--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -159,11 +159,11 @@
                     <div class="text-sm text-cura-accentLight text-left mt-3 space-y-4 leading-relaxed">
                         <div class="flex gap-3">
                             <i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
-                            <p><strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con una sólida trayectoria en el sector público.</p>
+                            <p><strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información.</p>
                         </div>
                         <div class="flex gap-3">
                             <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
-                            <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS/OMS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario y Técnica Normativa.</p>
+                            <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios de <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario, Análisis de Legislación en Eje Salud y Experto en Técnica Normativa en la <strong>Universidad Tecnológica Nacional</strong>.</p>
                         </div>
                         <div class="flex gap-3">
                             <i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
