--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -144,42 +144,46 @@
                 </div>
             </div>
 
-            <div class="md:col-span-5 lg:col-span-4 order-2 md:order-1 md:sticky md:top-24 self-start">
-                <div class="bg-cura-card border border-cura-accent/40 rounded-xl p-6 shadow-lg flex flex-col items-center text-center">
-                    <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-cura-accent mb-4 shadow-md bg-white">
-                        <img src="/ID01-41316202/profile.png" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
-                    </div>
-                    <h2 class="text-xl font-bold text-white mb-3">Franco A. Paganini</h2>
-             <a href="https://linkedin.com/in/franco-paganini" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-[#0077b5] hover:bg-[#005e93] text-white text-sm font-semibold rounded-md transition-colors w-full justify-center mb-4">
-                        <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-                        LinkedIn
-                    </a>
-                    <div class="w-full border-t border-white/20 my-2"></div>
+           <div class="md:col-span-5 lg:col-span-4 order-2 md:order-1 md:sticky md:top-24 self-start">
+    <div class="bg-cura-card border border-cura-accent/40 rounded-xl p-6 shadow-lg flex flex-col items-center text-center">
+        <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-cura-accent mb-4 shadow-md bg-white">
+            <img src="/ID01-41316202/profile.png" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
+        </div>
+        <h2 class="text-xl font-bold text-white mb-3">Franco A. Paganini</h2>
+        <a href="https://linkedin.com/in/franco-paganini" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-[#0077b5] hover:bg-[#005e93] text-white text-sm font-semibold rounded-md transition-colors w-full justify-center mb-4">
+            <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+            LinkedIn
+        </a>
+        <div class="w-full border-t border-white/20 my-2"></div>
 
-                    <div class="text-sm text-cura-accentLight text-left mt-3 space-y-4 leading-relaxed">
-                        <div class="flex gap-3">
-                            <i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
-                            <p><strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información.</p>
-                        </div>
-                        <div class="flex gap-3">
-                            <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
-                            <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios de <strong>Licenciatura en Sistemas (Universidad Nacional de Luján)</strong>, lo que le brindó los fundamentos lógicos para el diseño de infraestructuras complejas, y cuenta con más de diez años de experiencia en soporte y soluciones tecnológicas. Ha complementado este perfil con certificaciones internacionales de la <strong>OPS</strong> en Sistemas de Información y el estándar de interoperabilidad <strong>HL7 FHIR</strong>, además de especializaciones en Derecho Presupuestario, Análisis de Legislación en Eje Salud y Experto en Técnica Normativa en la <strong>Universidad Tecnológica Nacional</strong>.</p>
-                        </div>
-                        <div class="flex gap-3">
-                            <i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
-                            <p>Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa de infraestructura crítica diseñada para modernizar el Estado. Su trabajo se centra en transformar la gestión pública mediante herramientas concretas que aumenten la calidad, la eficiencia del gasto y la transparencia del sistema sanitario, garantizando la trazabilidad plena en todo el país.</p>
-                        </div>
-                        <div class="flex gap-3">
-                            <i class="ph-bold ph-user-focus text-cura-accent shrink-0 text-xl"></i>
-                            <p><strong>La motivación detrás de la Ley:</strong> El proyecto no nace en un escritorio, sino de la experiencia personal. Franco vivió en primera persona la fragmentación del sistema: historias clínicas dispersas, diagnósticos inconexos y la burocracia de los trámites repetidos. Ese recorrido lo llevó a transformar la frustración de paciente en una propuesta técnica y operativa con una sola meta: <strong>que ninguna persona vuelva a atravesar las barreras de un sistema desconectado.</strong></p>
-                        </div>
-                        <div class="flex gap-3">
-                            <i class="ph-bold ph-strategy text-cura-accent shrink-0 text-xl"></i>
-                            <p>Con una visión centrada en el ciudadano y un compromiso real con la modernización, Franco impulsa hoy la Ley C.U.R.A. como el cambio estructural necesario para el futuro de la salud en Argentina.</p>
-                        </div>
-                    </div>
-                </div>
+        <div class="text-sm text-cura-accentLight text-left mt-3 space-y-4 leading-relaxed">
+            <div class="flex gap-3">
+                <i class="ph-bold ph-medal text-cura-accent shrink-0 text-xl"></i>
+                <p><strong>Franco Agustín Paganini</strong> es <strong>Especialista en Gestión de Salud Digital</strong> (ADEN Business School / George Washington University) y profesional de tecnologías de la información con más de diez años de trayectoria.</p>
             </div>
+
+            <div class="flex gap-3">
+                <i class="ph-bold ph-graduation-cap text-cura-accent shrink-0 text-xl"></i>
+                <p>Su formación combina la arquitectura técnica con la estrategia sanitaria. Cursó estudios en la <strong>Universidad Nacional de Luján</strong>, base de su expertise en infraestructuras complejas, complementada con certificaciones internacionales de la <strong>OPS</strong> en <strong>Sistemas de Información para la Salud</strong> y el estándar de interoperabilidad <strong>HL7 FHIR</strong>.</p>
+            </div>
+
+            <div class="flex gap-3">
+                <i class="ph-bold ph-gavel text-cura-accent shrink-0 text-xl"></i>
+                <p>Cuenta con especializaciones en <strong>Derecho Presupuestario</strong> y <strong>Análisis de Legislación con eje en Salud</strong>, otorgadas por las cámaras del <strong>Congreso de la Nación</strong>, y continúa su desarrollo en <strong>Técnica Normativa</strong> en la <strong>Universidad Tecnológica Nacional</strong>.</p>
+            </div>
+
+            <div class="flex gap-3">
+                <i class="ph-bold ph-scroll text-cura-accent shrink-0 text-xl"></i>
+                <p>Es el autor intelectual e impulsor de la <strong>Ley C.U.R.A.</strong>, una iniciativa diseñada para modernizar el Estado, aumentar la eficiencia del gasto y garantizar la trazabilidad sanitaria plena en todo el país.</p>
+            </div>
+
+            <div class="flex gap-3">
+                <i class="ph-bold ph-user-focus text-cura-accent shrink-0 text-xl"></i>
+                <p><strong>La motivación detrás de la Ley:</strong> El proyecto nace de su experiencia personal al enfrentar la fragmentación del sistema. Esa vivencia transformó su perspectiva técnica en una meta clara: <strong>que nadie vuelva a atravesar las barreras de un sistema desconectado.</strong></p>
+            </div>
+        </div>
+    </div>
+</div>
         </div>
     </section>
 
